tests/negative/neg_write_to_constant_field.safe
-- Test: neg_write_to_constant_field
-- Description: Writes through a selected part rooted in a constant object must be rejected.
-- Expected: REJECT write_to_constant

package Neg_Write_To_Constant_Field

   type Pair is record
      Left  : Integer;
      Right : Integer;


   function Run
      Value : constant Pair = ((Left = 1, Right = 2) as Pair);

      Value.Left = 3;



